--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "17.3.1"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -10,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.4"
   },
   "repository": {
