--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://jssantos395:Changezz1@cluster0.wwt6s.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://jssantos395:Changezz1@cluster0.wwt6s.mongodb.net/Nfts?retryWrites=true&w=majority
 PORT=3000
